<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiParsely</string>
    <string name="action_settings">Settings</string>
    <string name="parsely">Parsely</string>
    <string name="button_track_url">Track URL</string>
    <string name="button_track_pid">Track ID</string>
    <string name="button_start_engagement">Start Engagement</string>
    <string name="button_stop_engagement">Stop Engagement</string>
    <string name="button_track_video">Track Video</string>
    <string name="button_pause_video">Pause Video</string>
    <string name="button_reset_video">Reset Video</string>
    <string name="button_flush_event_queue">Flush Event Queue</string>
    <string name="button_toggle_connection">Lose Connection</string>

</resources>